--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,4 +52,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.tag.outputs.image }}/${{ steps.tag.outputs.image_tag }}
+          tags: ${{ steps.tag.outputs.image }}:${{ steps.tag.outputs.image_tag }}
